plugins {
    id 'base'
    id 'org.springframework.boot' version '2.5.4'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id "org.sonarqube" version "3.3"
}

description = """ SpringBoot OCPP 1.6 JSON """

ext {
    springVersion = '5.3.9'
    springBootVersion = '2.5.4'
    lombokVersion = '1.18.20'
    junitVersion = '4.12'
}

sonarqube {
    properties {
        property 'sonar.projectKey', 'SpringOCPP16J'
        property 'sonar.login', '1611cb987a1847718313ee7ce5408e33c665f941'
        property 'sonar.host.url', 'http://localhost:9000'
    }
}

allprojects {
    group = 'ge.devel.ocpp'
    version = '0.0.1-SNAPSHOT'

    apply plugin: 'java'
    apply plugin: 'idea'

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    repositories {
        mavenLocal()
        mavenCentral()
    }
}

subprojects {
    sourceCompatibility = 8
    targetCompatibility = 8

    dependencies {
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
        implementation "org.projectlombok:lombok:${lombokVersion}"
        testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

        testImplementation 'junit:junit:${junitVersion}'
    }

    tasks.withType(Test) {
        useJUnitPlatform()
        jvmArgs '--enable-preview'
    }
}

project('app') {
    apply plugin: 'org.springframework.boot'

    dependencies {
        implementation project(':ws:json:json-1.6-impl')
        implementation project(':ws:soap:soap-1.6-impl')

        implementation group: 'javax.xml.ws', name: 'jaxws-api', version: '2.3.1'
        implementation group: 'javax.jws', name: 'javax.jws-api', version: '1.1'
        implementation group: 'com.sun.xml.messaging.saaj', name: 'saaj-impl', version: '1.5.3'
        implementation group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: '3.0.1'
        implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '3.0.2'

        implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
    }

    jar {
        manifest {
            attributes 'Main-Class': "ge.devel.ocpp.SpringOcpp16JApplication"
        }
    }
}

project('ws') {
    bootJar { enabled = false }
    jar { enabled = true }

    dependencies {

        implementation "org.springframework:spring-context:${springVersion}"
        implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'

        implementation group: 'eu.chargetime.ocpp', name: 'common', version: '1.0'
        implementation group: 'eu.chargetime.ocpp', name: 'v1_6', version: '1.0.1'
        implementation group: 'eu.chargetime.ocpp', name: 'OCPP-J', version: '1.0.1'
    }
}

project('ws:json:json-1.6-api') {
    bootJar { enabled = false }
    jar { enabled = true }

    dependencies {
        implementation project(':ws')

        implementation group: 'eu.chargetime.ocpp', name: 'common', version: '1.0'
        implementation group: 'eu.chargetime.ocpp', name: 'v1_6', version: '1.0.1'
        implementation group: 'eu.chargetime.ocpp', name: 'OCPP-J', version: '1.0.1'
    }
}

project('ws:json:json-1.6-impl') {
    bootJar { enabled = false }
    jar { enabled = true }

    dependencies {
        implementation project(':ws')
        implementation project(':ws:json:json-1.6-api')

        implementation "org.springframework:spring-context:${springVersion}"

        implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'

        implementation group: 'eu.chargetime.ocpp', name: 'common', version: '1.0'
        implementation group: 'eu.chargetime.ocpp', name: 'v1_6', version: '1.0.1'
        implementation group: 'eu.chargetime.ocpp', name: 'OCPP-J', version: '1.0.1'

        testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
    }
}

project('ws:soap:soap-1.6-api') {
    bootJar { enabled = false }
    jar { enabled = true }

    dependencies {
        implementation project(':ws')

        implementation group: 'eu.chargetime.ocpp', name: 'common', version: '1.0'
        implementation group: 'eu.chargetime.ocpp', name: 'v1_6', version: '1.0.1'
        implementation group: 'eu.chargetime.ocpp', name: 'OCPP-J', version: '1.0.1'
    }
}

project('ws:soap:soap-1.6-impl') {
    bootJar { enabled = false }
    jar { enabled = true }

    dependencies {
        implementation project(':ws')
        implementation project(':ws:soap:soap-1.6-api')

        implementation "org.springframework:spring-context:${springVersion}"

        implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'

        implementation group: 'eu.chargetime.ocpp', name: 'common', version: '1.0'
        implementation group: 'eu.chargetime.ocpp', name: 'v1_6', version: '1.0.1'
        implementation group: 'eu.chargetime.ocpp', name: 'OCPP-J', version: '1.0.1'

        testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
    }
}
